--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Github Page</title>
-    <link rel="stylesheet" href="style.css"/>
-  </head>
-  
-  <body>
-    <p>That shoud get you started!</p>
-  </body>
-<html>
+<head>
+  <title>Mark Keeler's Resume</title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+  <div class="container">
+    <div class="nav">
+      <h2>Ollie</h2>
+      <ul>
+        <li>sign up</li>
+        <li>search bikes</li>
+        <li>reserve a bike</li>
+        <li>about us</li>
+      </ul>
+    </div>
+    <div class="main">
+      <h1>Ollie Bike Sharing</h1>
+      <h3>Share Your Pedals with the World.</h3>
+      <p>Easy-to-use, free bike sharing now available in 27 cities. <a href="cities.html">list</a> of cities where you can find us.</p>
+    </div>
+  </div>
+</body>
+</html>
