--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
-<html>
 <head>
-  <title>Mark Keeler's Resume</title>
-  <meta charset="utf-8"/>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link href='https://fonts.googleapis.com/css?family=Raleway:300,800' rel='stylesheet' type='text/css'>
+  
 </head>
-<body>
-  <div class="container">
-    <div class="nav">
-      <h2>Ollie</h2>
-      <ul>
-        <li>sign up</li>
-        <li>search bikes</li>
-        <li>reserve a bike</li>
-        <li>about us</li>
-      </ul>
+<html>
+  <body>
+    <div class="container">
+    <h1>Cupful Cafe</h1>
+      <div class="hero">
+          <div class="hero-content">
+            <div>
+              <h2>Organic Tea and Coffee</h2>
+            </div>
+            <div>
+              <h2>Freshly Baked Pastries</h2>
+            </div>
+            <div>
+              <h2>Free Wifi</h2>
+            </div>
+            <div>
+              <h3>Read Our Menu</h3>
+            </div>
+          </div>
+      </div>
+
+      <div class="supporting-container">
+        <div class="upcoming">
+          <h3>Upcoming events</h3>
+        </div>
+        <div class="roast">
+          <h3>Today's Roast</h3>
+        </div>
+      </div>
+      <p>Contact Us</p>
     </div>
-    <div class="main">
-      <h1>Ollie Bike Sharing</h1>
-      <h3>Share Your Pedals with the World.</h3>
-      <p>Easy-to-use, free bike sharing now available in 27 cities. <a href="cities.html">list</a> of cities where you can find us.</p>
-    </div>
-  </div>
-</body>
+
+  </body>
 </html>
