--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
 <html>
   <body>
     <div class="container">
-    <h1>Cupful Cafe</h1>
+    <h1>Mark Keeler</h1>
       <div class="hero">
           <div class="hero-content">
             <div>
               <h2>Organic Tea and Coffee</h2>
             </div>
-            <div>
-              <h2>Freshly Baked Pastries</h2>
+            <ul>
+              <li>4824 E. 53rd St #217</li>
+              <li>Minneapolis, MN 55417</li>
+              <li>(952) 457-2383</li>
+              <li>MCKeeler@gmail.com</li>
             </div>
             <div>
               <h2>Free Wifi</h2>
