--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
+  <title>Mark Keeler's Application to Prime Digital Academy</title>
+  <meta charset="utf-8"/>
   <link href='https://fonts.googleapis.com/css?family=Raleway:300,800' rel='stylesheet' type='text/css'>
-  
 </head>
 <html>
   <body>
