--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <html>
   <body>
-    <div class="container">
-    <h1>Mark Keeler</h1>
+    <div id="container">
+     <div id=content container Mark Keeler</h1>
       <ul>
         <li>4824 E. 53rd St #217</li>
         <li>Minneapolis, MN 55417</li>
