--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <html>
   <body>
     <div id="container">
-     <div id=content container Mark Keeler</h1>
-      <ul>
-        <li>4824 E. 53rd St #217</li>
-        <li>Minneapolis, MN 55417</li>
-        <li>(952) 457-2383</li>
-        <li>MCKeeler@gmail.com</li>
+     <div id="content-contact"> 
+       <h1>Mark Keeler</h1>
+       <h2>4824 E. 53rd St #217</h2>
+       <h2>Minneapolis, MN 55417</h2>
+       <h2>(952) 457-2383</h2>
+       <h2>MCKeeler@gmail.com</h2>
      </div>
-            
+     <div id="content- 
             <div>
               <h2>Free Wifi</h2>
             </div>
