--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <div id="container">
      <div id="content-contact"> 
        <h1>Mark Keeler</h1>
-       <h2>4824 E. 53rd St #217</h2>
-       <h2>Minneapolis, MN 55417</h2>
-       <h2>(952) 457-2383</h2>
-       <h2>MCKeeler@gmail.com</h2>
+       <h3>4824 E. 53rd St #217</h3>
+       <h3>Minneapolis, MN 55417</h3>
+       <h3>(952) 457-2383</h2>
+       <h3>mckeeler@gmail.com</h3>
      </div>
-     <div id="content- 
+    <div id="content-objective">
+      <h3>Objective</h3>
             <div>
               <h2>Free Wifi</h2>
             </div>
