--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
   <body>
     <div id="container">
      <div id="content-contact"> 
-       <h1>Mark Keeler</h1>
-       <h3>4824 E. 53rd St #217</h3>
-       <h3>Minneapolis, MN 55417</h3>
-       <h3>(952) 457-2383</h2>
-       <h3>mckeeler@gmail.com</h3>
+      <h1>Mark Keeler</h1>
+      <h3>4824 E. 53rd St #217</h3>
+      <h3>Minneapolis, MN 55417</h3>
+      <h3>(952) 457-2383</h2>
+      <h3>mckeeler@gmail.com</h3>
      </div>
-    <div id="content-objective">
-      <h3>Objective</h3>
-            <div>
-              <h2>Free Wifi</h2>
+     <div id="content-objective">
+      <h2>Objective</h2>
+      <p>Having a growth mindset isn't just about having a strong work ethic, it flows from having deep curiosity. My desire is to learn how to further the reach of techology in the field of medicine.</p>
             </div>
             <div>
               <h3>Read Our Menu</h3>
