--- a/index.html
+++ b/index.html
@@ -16,13 +16,8 @@
      </div>
      <div id="content-objective">
       <h2>Objective</h2>
-      <p>Having a growth mindset isn't just about having a strong work ethic, it flows from having deep curiosity. My desire is to learn how to further the reach of techology in the field of medicine.</p>
-            </div>
-            <div>
-              <h3>Read Our Menu</h3>
-            </div>
-          </div>
-      </div>
+      <p>Having a growth mindset isn't just about having a strong work ethic, it flows from having deep curiosity. I'm curious how we might further the reach of techology in the field of medicine. It will be an exciting thing we do together.</p>
+     </div>
 
       <div class="supporting-container">
         <div class="upcoming">
