--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
   <body>
     <div id="container">
+     
      <div id="content-contact"> 
       <h1>Mark Keeler</h1>
       <h3>4824 E. 53rd St #217</h3>
@@ -14,11 +15,16 @@
       <h3>(952) 457-2383</h2>
       <h3>mckeeler@gmail.com</h3>
      </div>
+   
      <div id="content-objective">
       <h2>Objective</h2>
       <p>Having a growth mindset isn't just about having a strong work ethic, it flows from having deep curiosity. I'm curious how we might further the reach of techology in the field of medicine. It will be an exciting thing we do together.</p>
+      <p>Applying to Prime Digital Academy is career shift for me into software development. My professional life over the past decade has been spent leading Christian Churches. I'm proud of the work I did, but it is time for me to move on. I come ready to learn.</p>
      </div>
 
+     <div id="content-Experience">
+      <h2>Objective</h2>
+       
       <div class="supporting-container">
         <div class="upcoming">
           <h3>Upcoming events</h3>
