--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
    
      <div id="content-objective">
       <h2>Objective</h2>
-      <p>Having a growth mindset isn't just about having a strong work ethic, it flows from having deep curiosity. I'm curious how we might further the reach of techology in the field of medicine. It will be an exciting thing we do together.</p>
       <p>Applying to Prime Digital Academy is career shift for me into software development. My professional life over the past decade has been spent leading Christian Churches. I'm proud of the work I did, but it is time for me to move on. I come ready to learn.</p>
+      <p>Having a growth mindset isn't just about having a strong work ethic, it flows from having deep curiosity. I'm curious how we might further the reach of techology in the field of medicine. It will be an exciting thing we do together.</p>
      </div>
-
-     <div id="content-Experience">
-      <h2>Objective</h2>
-       
+      
+     <div id="content-experience">
+      <h2>Experience</h2>
+       <h3>Plymouth Creek Christian Church</h3>
+      <p>
       <div class="supporting-container">
         <div class="upcoming">
           <h3>Upcoming events</h3>
