--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
       <p>Having a growth mindset isn't just about having a strong work ethic, it flows from having deep curiosity. I'm curious how we might further the reach of techology in the field of medicine. It will be an exciting thing we do together.</p>
      </div>
       
-     <div id="content-experience">
-      <h2>Experience</h2>
-       <h3>Plymouth Creek Christian Church</h3>
-      <p>
+     <div id="content-experience"> Experience
+      <div id="content-Plymouth Creek Christian Church">
+      <h3>Plymouth Creek Christian Church</h3>
       <div class="supporting-container">
-        <div class="upcoming">
+        <div class="title-date">
+					<h4>Minister</h4>
+					<h4>Jan 2017-July 2020</h4>
+				</div>	
+				
           <h3>Upcoming events</h3>
         </div>
         <div class="roast">
