--- a/index.html
+++ b/index.html
@@ -27,12 +27,22 @@
       <h3>Plymouth Creek Christian Church</h3>
       <div class="supporting-container">
         <div class="title-date">
-					<h4>Minister</h4>
-					<h4>Jan 2017-July 2020</h4>
-				</div>	
-				
-          <h3>Upcoming events</h3>
+		<h4>Minister</h4>
+		<h4>Jan 2017-July 2020</h4>
+	</div>	
+	<div class="support-details">
+		<ul>
+			<li>Primary teacher for a diverse community of people</li>
+        		<li>Offer leadership insight into the role and practices of the board</li>
+			<li>Lead annual retreats for assessment and planning</li>
+			<li>Help individuals mature in their faith experience through teaching, reflection, and serving others</li>
+        		<li>Transition our services into an online format including video and online environments</li>
+			<li>Encourage partnership with other non-profits in our area</li>
+			<li>Set annual budget and fundraise to reach new goals</li>
+        		<li>Officiate weddings and funerals</li>
+		</ul>
         </div>
+	      
         <div class="roast">
           <h3>Today's Roast</h3>
         </div>
