--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
       <h3>Plymouth Creek Christian Church</h3>
       <div class="supporting-container">
         <div class="title-date">
-		<h4>Minister</h4>
-		<h4>Jan 2017-July 2020</h4>
+		<h4>Minister Jan 2017-July 2020</h4>
 	</div>	
 	<div class="support-details">
 		<ul>
-			<li>Primary teacher for a diverse community of people</li>
+			<li>Primary speaker for a diverse community of people 48 Sundays per year</li>
         		<li>Offer leadership insight into the role and practices of the board</li>
 			<li>Lead annual retreats for assessment and planning</li>
 			<li>Help individuals mature in their faith experience through teaching, reflection, and serving others</li>
@@ -43,7 +42,26 @@
 		</ul>
         </div>
 	      
-        <div class="roast">
+	<div id="content-The Commons">
+      <h3>The Commons</h3>
+      <div class="supporting-container">
+        <div class="title-date">
+		<h4>Minister June 2013-2017</h4>
+	</div>	
+	<div class="support-details">
+		<ul>
+			<li>Primary teacher for a young community of people questioning their faith</li>
+        		<li>Foster community in the midst of theological questioning in small and large settings</li>
+			<li>Offer leadership development training and assessment for key leaders</li>
+			<li>Help individuals mature in their faith experience through teaching, reflection, and serving others</li>
+        		<li>Event planning and execution for inviting new attenders</li>
+			<li>Create environments in homes for community building</li>
+			<li>Provide relational counseling especially leading towards marriage</li>
+        		<li>Officiate weddings</li>
+		</ul>
+        </div>
+       
+	      <div class="roast">
           <h3>Today's Roast</h3>
         </div>
       </div>
