--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>Mark Keeler's Application to Prime Digital Academy</title>
   <meta charset="utf-8"/>
-  <link rel="style" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <html>
   <body>
