--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h3>Plymouth Creek Christian Church</h3>
       <div class="supporting-container">
         <div class="title-date">
-		<h4>Minister Jan 2017-July 2020</h4>
+		<h4>Minister from Jan 2017-July 2020</h4>
 	</div>	
 	<div class="support-details">
 		<ul>
@@ -47,7 +47,7 @@
       <h3>The Commons</h3>
       <div class="supporting-container">
         <div class="title-date">
-		<h4>Minister June 2013-2017</h4>
+		<h4>Minister from June 2013-2017</h4>
 	</div>	
 	<div class="support-details">
 		<ul>
@@ -66,7 +66,7 @@
       <h3>3DM Leadership Network</h3>
       <div class="supporting-container">
         <div class="title-date">
-		<h4>Leadership Coach 2014-2016</h4>
+		<h4>Leadership Coach from 2014-2016</h4>
 	</div>	
 	<div class="support-details">
 		<ul>
@@ -82,7 +82,7 @@
       <h3>Nokomis East Neighborhood Association</h3>
       <div class="supporting-container">
         <div class="title-date">
-		<h4>Volunteer Board Member 2014-2017</h4>
+		<h4>Volunteer Board Member from 2014-2017</h4>
 	</div>	
 	<div class="support-details">
 		<ul>
